CA24-1083 refactor